fixed page wrap for flexbox

--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -9,10 +9,8 @@ main {
   margin-right: auto;
 }
 .page-wrap {
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 80px 3rem;
+  max-width: 90%;
+  margin: 5%;
 }
 
 .center {
@@ -127,7 +125,7 @@ body {
 
   .navbar {
     position: absolute;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(49, 47, 47, 0.8);
     top: 100%;
     left: 0;
     height: 0;
